--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ pnpm-debug.log*
 # Ignore uploads folder (as seen in server.js)
 /backend/uploads
 /backend/FIREBASE_ADMIN_SDK.json
+/backend/medx-f0c2b-firebase-adminsdk-fbsvc-daae3eba66.json
